# TranslateTool

./: BasicLog.cpp  BasicLog.h  CMakeLists.txt  InputFactory.cpp  InputFactory.h  KHeader.cpp  KHeader.h  UiaDocumentClient.cpp  main.cpp  test.cpp  vcpkg.json
src/: BasicLog.h  CMakeLists.txt  ClipboardTool.cpp  ClipboardTool.h  InputFactory.cpp  InputFactory.h  KHeader.cpp  KHeader.h  TranslateTool.cpp  TranslateTool.h
ui/: CMakeLists.txt  TranslateResult.cpp  TranslateResult.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
